<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">BeatBox</string>
    <string name="title_edit">Edit</string>
    <string name="title_metronome">Metronome</string>
    <string name="title_load">Load</string>
    <string name="action_settings">Settings</string>
    
    <!-- Strings for the Metronome Screen -->
    <string name="template_mode_label">Template</string>
    <string name="basic_mode_label">Basic</string>
    <string name="bpm_label">120 BPM</string>
    <string name="inc_tempo">+</string>
    <string name="dec_tempo">-</string>
    <string name="song_title"></string>
    
    <!-- Strings for the Load Screen -->
	<string name="download_button">Download</string>
	<string name="cloud_mode">Cloud Repository</string>
	<string name="local_mode">Local Templates</string>
	<string name="load_template_name">Placeholder Name Longer</string>
	<string name="load_edit_button">Edit</string>
	<string name="load_upload_button">Upload</string>
	<string name="load_delete_button">Delete</string>
	<string name="search">Search</string>

	<!-- Strings for the Save Screen -->
	<string name="save_title">Template Name</string>
	<string name="save_composer">Composer or Artist</string>
	<string name="save_creator">Creator</string>
	<string name="save_description">Description</string>
	<string name="Save">Save</string>
	<string name="save_bCancel">Cancel</string>
	<string name="save_title_hint">Enter the name of the song</string>
	<string name="save_composer_hint">Enter the name of the composer</string>
	<string name="save_creator_hint">Enter your name</string>
	<string name="save_description_hint">Enter any relevant information</string>
	<string name="play_button_label">Play</string>
	<string name="pause_button_label">Pause</string>
	
	    <!-- Strings for the Edit Screen -->
	<string name="editListTitle">Select Template to Edit</string>
	<string name="createNewTemplate">Create Template</string>
	<string name="create_song_description">Description</string>
    <string name="create_song_artist">Artist</string>
    <string name="create_song_creator">Creator</string>
    <string name="create_title">Select Section To Edit</string>
    <string name="create_plus_desc">Add another section</string>
    <string name="Back">Back</string>
    <string name="createNewSection">Add Section</string>
   
    
    <string name="measures">measures with</string>
    <string name="bpm">BPM for</string>
    <string name="beatsPerMeasure">beats per measure</string>
    
    <string name="OK">OK</string>
    <string name="Cancel">Cancel</string>
    <string name="delete">Delete</string>
    <string name="tempo_dialog">TempoDialog</string>
    <string name="missing_template_name_title">Missing Template Name</string>
    <string name="missing_template_name_message">You must enter a name for the template</string>
    <string name="missing_template_sections_title">Missing Template Sections</string>
    <string name="missing_template_sections_message">Your template is empty! Please add at least one section to the template.</string>
	
	
	

</resources>
