<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content" >
    
    <Button
        android:text="@string/load_template_name"
    	android:id="@+id/song_name_button"
    	android:layout_width="0dp"
    	android:layout_weight="5"
    	android:layout_height="wrap_content"
    	android:singleLine="true"
    	android:gravity="left|bottom" />
    
    <ImageButton
        android:id="@+id/editButton"
        android:contentDescription="@string/load_edit_button"
    	android:layout_width="0dp"
    	android:layout_weight="1"
    	android:layout_height="wrap_content"
   		android:src="@drawable/ic_launcher"
    	android:background="@drawable/ic_launcher" />
    
    <ImageButton
        android:id="@+id/uploadButton"
        android:contentDescription="@string/load_upload_button"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_launcher"
        android:background="@drawable/ic_launcher" />
    
    <ImageButton 
        android:id="@+id/deleteButton"
        android:contentDescription="@string/load_delete_button"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_launcher"
        android:background="@drawable/ic_launcher"/>
    
</LinearLayout>
