<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/metronome_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/song_title_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/song_title"
        android:visibility="invisible" />

    <HorizontalScrollView
        android:id="@+id/tempo_timeline"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/border"
        android:scrollbars="none"
        android:visibility="invisible">
        <LinearLayout
            android:id="@+id/tempo_container"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="horizontal">       
        </LinearLayout>
    </HorizontalScrollView>

    <LinearLayout
        android:id="@+id/bpm_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">

        <Button
            android:id="@+id/dec_tempo_button"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="decTempo"
            android:text="@string/dec_tempo" />

        <TextView
            android:id="@+id/bpm_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bpm_label" />

        <Button
            android:id="@+id/inc_tempo_button"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="incTempo"
            android:text="@string/inc_tempo" />
    </LinearLayout>
    
    <FrameLayout
        android:id="@+id/play_button_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <ImageButton
            android:id="@+id/play_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="play"
            android:src="@drawable/play_button_default" />

        <ImageButton
            android:id="@+id/pause_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="pause"
            android:src="@drawable/pause_button_default"
            android:visibility="invisible" />
    </FrameLayout>

    <Button
        android:id="@+id/mode_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/template_mode_label" />

</LinearLayout>